# jupyter-output-monitor

./: .gitignore  README.md  monitor_cells.py  pyproject.toml  tox.ini
.github/workflows/: main.yml
automated/: convert.py  imviz-profile.ipynb
jupyter_output_monitor/: __init__.py  __main__.py  _monitor.py  _report.py  _version.py
jupyter_output_monitor/tests/: test_monitor.py
